# chip8recompiled

./: .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  COMPATIBILITY_REPORT.md  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
docs/: ARCHITECTURE.md  MULTI_ROM.md  MULTI_ROM_CHANGELOG.md  MULTI_ROM_IMPLEMENTATION.md  MULTI_ROM_QUICKREF.md  MULTI_ROM_README.md  ROADMAP.md
recompiler/: CMakeLists.txt
recompiler/include/recompiler/: analyzer.h  batch.h  config.h  decoder.h  generator.h  rom.h
recompiler/src/: analyzer.cpp  batch.cpp  config.cpp  decoder.cpp  generator.cpp  main.cpp  rom.cpp
runtime/: CMakeLists.txt
runtime/include/chip8rt/: context.h  imgui_overlay.h  instructions.h  menu.h  platform.h  rom_catalog.h  runtime.h  settings.h
runtime/src/: context.c  font.c  imgui_overlay.cpp  instructions.c  menu.c  platform_headless.c  platform_sdl.c  rom_selector.cpp  runtime.c  settings.c
scripts/: batch_compile_example.sh  extract_reference.py  run_test_suite.sh  test_roms.sh
tests/references/: 1-chip8-logo.pbm  2-ibm-logo.pbm  3-corax.pbm  4-flags.pbm
